[gd_scene load_steps=7 format=2]

[ext_resource path="res://games/MensaMiniGame/Assets/Scripts/Food.gd" type="Script" id=1]
[ext_resource path="res://games/MensaMiniGame/Assets/Images/Food/Plate.png" type="Texture" id=2]
[ext_resource path="res://games/MensaMiniGame/Assets/Font/FoodLabel.tres" type="DynamicFont" id=3]
[ext_resource path="res://audios/Mensa/plateSelect.ogg" type="AudioStream" id=4]
[ext_resource path="res://audios/Mensa/heartGone.ogg" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 64.0
height = 110.0

[node name="Food" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="PlateSprite" type="Sprite" parent="Area2D"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1, 161 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="FoodSprite" type="Sprite" parent="."]
position = Vector2( 0, -10 )

[node name="FoodLabel" type="Label" parent="."]
margin_left = -109.625
margin_top = 226.375
margin_right = 110.375
margin_bottom = 247.375
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Camembert (gebacken)"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="HealthGoneSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
